package com.uitopic.restock.platform.sales.domain.model.entities;

import lombok.*;

@Getter
@NoArgsConstructor
@AllArgsConstructor
@With
@EqualsAndHashCode
public class SalesOrderItem {
}
